--- a/.github/workflows/sagemaker-cicd.yml
+++ b/.github/workflows/sagemaker-cicd.yml
@@ -6,6 +6,8 @@ on:
     paths:
       - 'machine_learning/training.ipynb'
       - 'requirements.txt'
+  # Tambahkan manual trigger untuk testing
+  workflow_dispatch:
 
 jobs:
   deploy:
@@ -13,6 +15,14 @@ jobs:
     timeout-minutes: 15
     
     steps:
+    - name: Debug Info
+      run: |
+        echo "Workflow triggered!"
+        echo "Event name: ${{ github.event_name }}"
+        echo "Branch: ${{ github.ref }}"
+        echo "Changed files:"
+        git diff --name-only HEAD^ HEAD || echo "No previous commit to compare"
+        
     - name: Checkout code
       uses: actions/checkout@v4
 
@@ -44,8 +54,8 @@ jobs:
 
         echo "Target instance: $INSTANCE_NAME"
 
-        # Create lifecycle configuration
-        LIFECYCLE_SCRIPT=$(cat << 'EOF'
+        # Create lifecycle configuration script
+        cat > lifecycle_script.sh << 'EOF'
         #!/bin/bash
         set -e
 
@@ -135,7 +145,9 @@ jobs:
 
         echo "Lifecycle configuration completed successfully"
         EOF
-        )
+
+        # Base64 encode the script
+        LIFECYCLE_SCRIPT=$(base64 -w 0 lifecycle_script.sh)
 
         # Create new lifecycle configuration
         echo "Creating lifecycle configuration..."
