--- a/.github/workflows/sagemaker-cicd.yml
+++ b/.github/workflows/sagemaker-cicd.yml
@@ -14,6 +14,12 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 15
     
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+      AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
+    
     steps:
     - name: Debug Info
       run: |
@@ -26,21 +32,20 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Configure AWS credentials
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
-        AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
+    - name: Install AWS CLI
       run: |
-        echo "AWS credentials configured via environment variables"
+        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+        unzip awscliv2.zip
+        sudo ./aws/install
+        aws --version
+
+    - name: Test AWS Connection
+      run: |
+        echo "Testing AWS connection..."
+        aws sts get-caller-identity
+        aws sagemaker list-notebook-instances --max-items 1
 
     - name: Deploy to SageMaker Notebook
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
-        AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
       run: |
         # Generate unique config name
         CONFIG_NAME="notebook-config-$(date +%Y%m%d%H%M%S)"
@@ -51,7 +56,7 @@ jobs:
           --query "NotebookInstances[0].NotebookInstanceName" \
           --output text)
         
-        if [ -z "$INSTANCE_NAME" ]; then
+        if [ -z "$INSTANCE_NAME" ] || [ "$INSTANCE_NAME" = "None" ]; then
           echo "::error::No active SageMaker notebook instance found"
           exit 1
         fi
@@ -60,95 +65,95 @@ jobs:
 
         # Create lifecycle configuration script
         cat > lifecycle_script.sh << 'EOF'
-        #!/bin/bash
-        set -e
+#!/bin/bash
+set -e
 
-        # ====================== SYSTEM SETUP ======================
-        echo "Starting lifecycle configuration..."
+# ====================== SYSTEM SETUP ======================
+echo "Starting lifecycle configuration..."
 
-        # Update system and install core packages
-        sudo yum update -y
-        sudo yum install -y python3 python3-devel git wget unzip
+# Update system and install core packages
+sudo yum update -y
+sudo yum install -y python3 python3-devel git wget unzip
 
-        # ================== PYTHON ENVIRONMENT ===================
-        echo "Setting up Python environment..."
+# ================== PYTHON ENVIRONMENT ===================
+echo "Setting up Python environment..."
 
-        # Upgrade pip and install core packages
-        sudo pip3 install --upgrade pip
-        sudo pip3 install --no-cache-dir \
-          boto3==1.28.0 \
-          pandas==1.5.0 \
-          numpy==1.21.0 \
-          scikit-learn==1.0.0
+# Upgrade pip and install core packages
+sudo pip3 install --upgrade pip
+sudo pip3 install --no-cache-dir \
+  boto3==1.28.0 \
+  pandas==1.5.0 \
+  numpy==1.21.0 \
+  scikit-learn==1.0.0
 
-        # ================== REPOSITORY SETUP =====================
-        REPO_URL="https://github.com/handipradana/machinelearninglks.git"
-        TARGET_DIR="/home/ec2-user/SageMaker/machinelearninglks"
-        NOTEBOOK_SRC="$TARGET_DIR/machine_learning/training.ipynb"
-        NOTEBOOK_DEST="/home/ec2-user/SageMaker/training.ipynb"
+# ================== REPOSITORY SETUP =====================
+REPO_URL="https://github.com/handipradana/machinelearninglks.git"
+TARGET_DIR="/home/ec2-user/SageMaker/machinelearninglks"
+NOTEBOOK_SRC="$TARGET_DIR/machine_learning/training.ipynb"
+NOTEBOOK_DEST="/home/ec2-user/SageMaker/training.ipynb"
 
-        echo "Setting up repository..."
-        if [ ! -d "$TARGET_DIR" ]; then
-          git clone "$REPO_URL" "$TARGET_DIR"
-        else
-          cd "$TARGET_DIR"
-          git fetch origin
-          git reset --hard origin/main
-        fi
+echo "Setting up repository..."
+if [ ! -d "$TARGET_DIR" ]; then
+  git clone "$REPO_URL" "$TARGET_DIR"
+else
+  cd "$TARGET_DIR"
+  git fetch origin
+  git reset --hard origin/main
+fi
 
-        # Install additional requirements if exists
-        if [ -f "$TARGET_DIR/requirements.txt" ]; then
-          echo "Installing additional requirements..."
-          sudo pip3 install --no-cache-dir -r "$TARGET_DIR/requirements.txt"
-        fi
+# Install additional requirements if exists
+if [ -f "$TARGET_DIR/requirements.txt" ]; then
+  echo "Installing additional requirements..."
+  sudo pip3 install --no-cache-dir -r "$TARGET_DIR/requirements.txt"
+fi
 
-        # ================== JUPYTER CONFIGURATION ================
-        echo "Configuring Jupyter..."
-        JUPYTER_CONFIG_DIR="/home/ec2-user/.jupyter"
-        JUPYTER_CONFIG="$JUPYTER_CONFIG_DIR/jupyter_server_config.py"
+# ================== JUPYTER CONFIGURATION ================
+echo "Configuring Jupyter..."
+JUPYTER_CONFIG_DIR="/home/ec2-user/.jupyter"
+JUPYTER_CONFIG="$JUPYTER_CONFIG_DIR/jupyter_server_config.py"
 
-        mkdir -p "$JUPYTER_CONFIG_DIR"
+mkdir -p "$JUPYTER_CONFIG_DIR"
 
-        cat > "$JUPYTER_CONFIG" << 'JCONFIG'
-        # Disable browser
-        c.ServerApp.open_browser = False
-        c.ServerApp.webbrowser = ""
+cat > "$JUPYTER_CONFIG" << 'JCONFIG'
+# Disable browser
+c.ServerApp.open_browser = False
+c.ServerApp.webbrowser = ""
 
-        # Server settings
-        c.ServerApp.ip = '0.0.0.0'
-        c.ServerApp.port = 8888
-        c.ServerApp.token = ''
-        c.ServerApp.password = ''
+# Server settings
+c.ServerApp.ip = '0.0.0.0'
+c.ServerApp.port = 8888
+c.ServerApp.token = ''
+c.ServerApp.password = ''
 
-        # Notebook settings
-        c.ServerApp.notebook_dir = '/home/ec2-user/SageMaker'
-        c.ServerApp.allow_origin = '*'
-        c.FileContentsManager.delete_to_trash = False
-        JCONFIG
+# Notebook settings
+c.ServerApp.notebook_dir = '/home/ec2-user/SageMaker'
+c.ServerApp.allow_origin = '*'
+c.FileContentsManager.delete_to_trash = False
+JCONFIG
 
-        # ================== PERMISSIONS & CLEANUP ================
-        echo "Setting permissions..."
-        sudo chown -R ec2-user:ec2-user "$TARGET_DIR"
-        sudo chown ec2-user:ec2-user "$JUPYTER_CONFIG"
-        sudo chmod 755 "$JUPYTER_CONFIG"
+# ================== PERMISSIONS & CLEANUP ================
+echo "Setting permissions..."
+sudo chown -R ec2-user:ec2-user "$TARGET_DIR"
+sudo chown ec2-user:ec2-user "$JUPYTER_CONFIG"
+sudo chmod 755 "$JUPYTER_CONFIG"
 
-        # Copy notebook to main directory
-        if [ -f "$NOTEBOOK_SRC" ]; then
-          cp "$NOTEBOOK_SRC" "$NOTEBOOK_DEST"
-          chown ec2-user:ec2-user "$NOTEBOOK_DEST"
-        fi
+# Copy notebook to main directory
+if [ -f "$NOTEBOOK_SRC" ]; then
+  cp "$NOTEBOOK_SRC" "$NOTEBOOK_DEST"
+  chown ec2-user:ec2-user "$NOTEBOOK_DEST"
+fi
 
-        # ================== FINALIZATION ========================
-        echo "Restarting Jupyter server..."
-        if pgrep -f jupyter; then
-          pkill -f jupyter
-          sleep 2
-        fi
+# ================== FINALIZATION ========================
+echo "Restarting Jupyter server..."
+if pgrep -f jupyter; then
+  pkill -f jupyter
+  sleep 2
+fi
 
-        sudo -u ec2-user nohup jupyter notebook --allow-root &> /var/log/jupyter.log &
+sudo -u ec2-user nohup jupyter notebook --allow-root &> /var/log/jupyter.log &
 
-        echo "Lifecycle configuration completed successfully"
-        EOF
+echo "Lifecycle configuration completed successfully"
+EOF
 
         # Base64 encode the script
         LIFECYCLE_SCRIPT=$(base64 -w 0 lifecycle_script.sh)
