--- a/.github/workflows/sagemaker-cicd.yml
+++ b/.github/workflows/sagemaker-cicd.yml
@@ -65,95 +65,83 @@ jobs:
 
         # Create lifecycle configuration script
         cat > lifecycle_script.sh << 'EOF'
-#!/bin/bash
-set -e
-
-# ====================== SYSTEM SETUP ======================
-echo "Starting lifecycle configuration..."
-
-# Update system and install core packages
-sudo yum update -y
-sudo yum install -y python3 python3-devel git wget unzip
-
-# ================== PYTHON ENVIRONMENT ===================
-echo "Setting up Python environment..."
-
-# Upgrade pip and install core packages
-sudo pip3 install --upgrade pip
-sudo pip3 install --no-cache-dir \
-  boto3==1.28.0 \
-  pandas==1.5.0 \
-  numpy==1.21.0 \
-  scikit-learn==1.0.0
-
-# ================== REPOSITORY SETUP =====================
-REPO_URL="https://github.com/handipradana/machinelearninglks.git"
-TARGET_DIR="/home/ec2-user/SageMaker/machinelearninglks"
-NOTEBOOK_SRC="$TARGET_DIR/machine_learning/training.ipynb"
-NOTEBOOK_DEST="/home/ec2-user/SageMaker/training.ipynb"
-
-echo "Setting up repository..."
-if [ ! -d "$TARGET_DIR" ]; then
-  git clone "$REPO_URL" "$TARGET_DIR"
-else
-  cd "$TARGET_DIR"
-  git fetch origin
-  git reset --hard origin/main
-fi
-
-# Install additional requirements if exists
-if [ -f "$TARGET_DIR/requirements.txt" ]; then
-  echo "Installing additional requirements..."
-  sudo pip3 install --no-cache-dir -r "$TARGET_DIR/requirements.txt"
-fi
-
-# ================== JUPYTER CONFIGURATION ================
-echo "Configuring Jupyter..."
-JUPYTER_CONFIG_DIR="/home/ec2-user/.jupyter"
-JUPYTER_CONFIG="$JUPYTER_CONFIG_DIR/jupyter_server_config.py"
-
-mkdir -p "$JUPYTER_CONFIG_DIR"
-
-cat > "$JUPYTER_CONFIG" << 'JCONFIG'
-# Disable browser
-c.ServerApp.open_browser = False
-c.ServerApp.webbrowser = ""
-
-# Server settings
-c.ServerApp.ip = '0.0.0.0'
-c.ServerApp.port = 8888
-c.ServerApp.token = ''
-c.ServerApp.password = ''
-
-# Notebook settings
-c.ServerApp.notebook_dir = '/home/ec2-user/SageMaker'
-c.ServerApp.allow_origin = '*'
-c.FileContentsManager.delete_to_trash = False
-JCONFIG
-
-# ================== PERMISSIONS & CLEANUP ================
-echo "Setting permissions..."
-sudo chown -R ec2-user:ec2-user "$TARGET_DIR"
-sudo chown ec2-user:ec2-user "$JUPYTER_CONFIG"
-sudo chmod 755 "$JUPYTER_CONFIG"
-
-# Copy notebook to main directory
-if [ -f "$NOTEBOOK_SRC" ]; then
-  cp "$NOTEBOOK_SRC" "$NOTEBOOK_DEST"
-  chown ec2-user:ec2-user "$NOTEBOOK_DEST"
-fi
-
-# ================== FINALIZATION ========================
-echo "Restarting Jupyter server..."
-if pgrep -f jupyter; then
-  pkill -f jupyter
-  sleep 2
-fi
-
-sudo -u ec2-user nohup jupyter notebook --allow-root &> /var/log/jupyter.log &
-
-echo "Lifecycle configuration completed successfully"
-EOF
+        #!/bin/bash
+        set -e
+        
+        echo "Starting lifecycle configuration..."
+        
+        # Update system and install core packages
+        sudo yum update -y
+        sudo yum install -y python3 python3-devel git wget unzip
+        
+        # Upgrade pip and install core packages
+        sudo pip3 install --upgrade pip
+        sudo pip3 install --no-cache-dir boto3==1.28.0 pandas==1.5.0 numpy==1.21.0 scikit-learn==1.0.0
+        
+        # Repository setup
+        REPO_URL="https://github.com/handipradana/machinelearninglks.git"
+        TARGET_DIR="/home/ec2-user/SageMaker/machinelearninglks"
+        NOTEBOOK_SRC="$TARGET_DIR/machine_learning/training.ipynb"
+        NOTEBOOK_DEST="/home/ec2-user/SageMaker/training.ipynb"
+        
+        echo "Setting up repository..."
+        if [ ! -d "$TARGET_DIR" ]; then
+          git clone "$REPO_URL" "$TARGET_DIR"
+        else
+          cd "$TARGET_DIR"
+          git fetch origin
+          git reset --hard origin/main
+        fi
+        
+        # Install additional requirements if exists
+        if [ -f "$TARGET_DIR/requirements.txt" ]; then
+          echo "Installing additional requirements..."
+          sudo pip3 install --no-cache-dir -r "$TARGET_DIR/requirements.txt"
+        fi
+        
+        # Jupyter configuration
+        echo "Configuring Jupyter..."
+        JUPYTER_CONFIG_DIR="/home/ec2-user/.jupyter"
+        JUPYTER_CONFIG="$JUPYTER_CONFIG_DIR/jupyter_server_config.py"
+        
+        mkdir -p "$JUPYTER_CONFIG_DIR"
+        
+        # Create Jupyter config file
+        cat > "$JUPYTER_CONFIG" << 'INNER_EOF'
+        c.ServerApp.open_browser = False
+        c.ServerApp.webbrowser = ""
+        c.ServerApp.ip = '0.0.0.0'
+        c.ServerApp.port = 8888
+        c.ServerApp.token = ''
+        c.ServerApp.password = ''
+        c.ServerApp.notebook_dir = '/home/ec2-user/SageMaker'
+        c.ServerApp.allow_origin = '*'
+        c.FileContentsManager.delete_to_trash = False
+        INNER_EOF
+        
+        # Set permissions
+        echo "Setting permissions..."
+        sudo chown -R ec2-user:ec2-user "$TARGET_DIR"
+        sudo chown ec2-user:ec2-user "$JUPYTER_CONFIG"
+        sudo chmod 755 "$JUPYTER_CONFIG"
+        
+        # Copy notebook to main directory
+        if [ -f "$NOTEBOOK_SRC" ]; then
+          cp "$NOTEBOOK_SRC" "$NOTEBOOK_DEST"
+          chown ec2-user:ec2-user "$NOTEBOOK_DEST"
+        fi
+        
+        # Restart Jupyter server
+        echo "Restarting Jupyter server..."
+        if pgrep -f jupyter; then
+          pkill -f jupyter
+          sleep 2
+        fi
+        
+        sudo -u ec2-user nohup jupyter notebook --allow-root &> /var/log/jupyter.log &
+        
+        echo "Lifecycle configuration completed successfully"
+        EOF
 
         # Base64 encode the script
         LIFECYCLE_SCRIPT=$(base64 -w 0 lifecycle_script.sh)
