--- a/.github/workflows/sagemaker-cicd.yml
+++ b/.github/workflows/sagemaker-cicd.yml
@@ -6,7 +6,6 @@ on:
     paths:
       - 'machine_learning/training.ipynb'
       - 'requirements.txt'
-  # Tambahkan manual trigger untuk testing
   workflow_dispatch:
 
 jobs:
@@ -64,56 +63,87 @@ jobs:
         echo "Target instance: $INSTANCE_NAME"
 
         # Create lifecycle configuration script
-        echo '#!/bin/bash' > lifecycle_script.sh
-        echo 'set -e' >> lifecycle_script.sh
-        echo 'echo "Starting lifecycle configuration..."' >> lifecycle_script.sh
-        echo 'sudo yum update -y' >> lifecycle_script.sh
-        echo 'sudo yum install -y python3 python3-devel git wget unzip' >> lifecycle_script.sh
-        echo 'sudo pip3 install --upgrade pip' >> lifecycle_script.sh
-        echo 'sudo pip3 install --no-cache-dir boto3==1.28.0 pandas==1.5.0 numpy==1.21.0 scikit-learn==1.0.0' >> lifecycle_script.sh
-        echo 'REPO_URL="https://github.com/handipradana/machinelearninglks.git"' >> lifecycle_script.sh
-        echo 'TARGET_DIR="/home/ec2-user/SageMaker/machinelearninglks"' >> lifecycle_script.sh
-        echo 'NOTEBOOK_SRC="$TARGET_DIR/machine_learning/training.ipynb"' >> lifecycle_script.sh
-        echo 'NOTEBOOK_DEST="/home/ec2-user/SageMaker/training.ipynb"' >> lifecycle_script.sh
-        echo 'echo "Setting up repository..."' >> lifecycle_script.sh
-        echo 'if [ ! -d "$TARGET_DIR" ]; then' >> lifecycle_script.sh
-        echo '  git clone "$REPO_URL" "$TARGET_DIR"' >> lifecycle_script.sh
-        echo 'else' >> lifecycle_script.sh
-        echo '  cd "$TARGET_DIR"' >> lifecycle_script.sh
-        echo '  git fetch origin' >> lifecycle_script.sh
-        echo '  git reset --hard origin/main' >> lifecycle_script.sh
-        echo 'fi' >> lifecycle_script.sh
-        echo 'if [ -f "$TARGET_DIR/requirements.txt" ]; then' >> lifecycle_script.sh
-        echo '  echo "Installing additional requirements..."' >> lifecycle_script.sh
-        echo '  sudo pip3 install --no-cache-dir -r "$TARGET_DIR/requirements.txt"' >> lifecycle_script.sh
-        echo 'fi' >> lifecycle_script.sh
-        echo 'echo "Configuring Jupyter..."' >> lifecycle_script.sh
-        echo 'JUPYTER_CONFIG_DIR="/home/ec2-user/.jupyter"' >> lifecycle_script.sh
-        echo 'JUPYTER_CONFIG="$JUPYTER_CONFIG_DIR/jupyter_server_config.py"' >> lifecycle_script.sh
-        echo 'mkdir -p "$JUPYTER_CONFIG_DIR"' >> lifecycle_script.sh
-        echo 'echo "c.ServerApp.open_browser = False" > "$JUPYTER_CONFIG"' >> lifecycle_script.sh
-        echo 'echo "c.ServerApp.ip = \"0.0.0.0\"" >> "$JUPYTER_CONFIG"' >> lifecycle_script.sh
-        echo 'echo "c.ServerApp.port = 8888" >> "$JUPYTER_CONFIG"' >> lifecycle_script.sh
-        echo 'echo "c.ServerApp.token = \"\"" >> "$JUPYTER_CONFIG"' >> lifecycle_script.sh
-        echo 'echo "c.ServerApp.password = \"\"" >> "$JUPYTER_CONFIG"' >> lifecycle_script.sh
-        echo 'echo "c.ServerApp.notebook_dir = \"/home/ec2-user/SageMaker\"" >> "$JUPYTER_CONFIG"' >> lifecycle_script.sh
-        echo 'echo "c.ServerApp.allow_origin = \"*\"" >> "$JUPYTER_CONFIG"' >> lifecycle_script.sh
-        echo 'echo "c.FileContentsManager.delete_to_trash = False" >> "$JUPYTER_CONFIG"' >> lifecycle_script.sh
-        echo 'echo "Setting permissions..."' >> lifecycle_script.sh
-        echo 'sudo chown -R ec2-user:ec2-user "$TARGET_DIR"' >> lifecycle_script.sh
-        echo 'sudo chown ec2-user:ec2-user "$JUPYTER_CONFIG"' >> lifecycle_script.sh
-        echo 'sudo chmod 755 "$JUPYTER_CONFIG"' >> lifecycle_script.sh
-        echo 'if [ -f "$NOTEBOOK_SRC" ]; then' >> lifecycle_script.sh
-        echo '  cp "$NOTEBOOK_SRC" "$NOTEBOOK_DEST"' >> lifecycle_script.sh
-        echo '  chown ec2-user:ec2-user "$NOTEBOOK_DEST"' >> lifecycle_script.sh
-        echo 'fi' >> lifecycle_script.sh
-        echo 'echo "Restarting Jupyter server..."' >> lifecycle_script.sh
-        echo 'if pgrep -f jupyter; then' >> lifecycle_script.sh
-        echo '  pkill -f jupyter' >> lifecycle_script.sh
-        echo '  sleep 2' >> lifecycle_script.sh
-        echo 'fi' >> lifecycle_script.sh
-        echo 'sudo -u ec2-user nohup jupyter notebook --allow-root &> /var/log/jupyter.log &' >> lifecycle_script.sh
-        echo 'echo "Lifecycle configuration completed successfully"' >> lifecycle_script.sh
+        cat << 'EOF' > lifecycle_script.sh
+#!/bin/bash
+set -e
+
+echo "Starting lifecycle configuration..."
+
+# System updates and dependencies
+sudo yum update -y
+sudo yum install -y python3 python3-devel git wget unzip
+
+# Python environment setup
+sudo pip3 install --upgrade pip
+sudo pip3 install --no-cache-dir \
+  boto3==1.28.0 \
+  pandas==1.5.0 \
+  numpy==1.21.0 \
+  scikit-learn==1.0.0
+
+# Repository setup
+REPO_URL="https://github.com/handipradana/machinelearninglks.git"
+TARGET_DIR="/home/ec2-user/SageMaker/machinelearninglks"
+NOTEBOOK_SRC="$TARGET_DIR/machine_learning/training.ipynb"
+NOTEBOOK_DEST="/home/ec2-user/SageMaker/training.ipynb"
+
+echo "Setting up repository..."
+if [ ! -d "$TARGET_DIR" ]; then
+  git clone "$REPO_URL" "$TARGET_DIR"
+else
+  cd "$TARGET_DIR"
+  git fetch origin
+  git reset --hard origin/main
+fi
+
+# Install additional requirements if exists
+if [ -f "$TARGET_DIR/requirements.txt" ]; then
+  echo "Installing additional requirements..."
+  sudo pip3 install --no-cache-dir -r "$TARGET_DIR/requirements.txt"
+fi
+
+# Jupyter configuration
+echo "Configuring Jupyter..."
+JUPYTER_CONFIG_DIR="/home/ec2-user/.jupyter"
+JUPYTER_CONFIG="$JUPYTER_CONFIG_DIR/jupyter_server_config.py"
+
+mkdir -p "$JUPYTER_CONFIG_DIR"
+
+cat > "$JUPYTER_CONFIG" << 'JCONFIG'
+c.ServerApp.open_browser = False
+c.ServerApp.webbrowser = ""
+c.ServerApp.ip = '0.0.0.0'
+c.ServerApp.port = 8888
+c.ServerApp.token = ''
+c.ServerApp.password = ''
+c.ServerApp.notebook_dir = '/home/ec2-user/SageMaker'
+c.ServerApp.allow_origin = '*'
+c.FileContentsManager.delete_to_trash = False
+JCONFIG
+
+# Permissions and cleanup
+echo "Setting permissions..."
+sudo chown -R ec2-user:ec2-user "$TARGET_DIR"
+sudo chown ec2-user:ec2-user "$JUPYTER_CONFIG"
+sudo chmod 755 "$JUPYTER_CONFIG"
+
+# Copy notebook to main directory
+if [ -f "$NOTEBOOK_SRC" ]; then
+  cp "$NOTEBOOK_SRC" "$NOTEBOOK_DEST"
+  chown ec2-user:ec2-user "$NOTEBOOK_DEST"
+fi
+
+# Restart Jupyter
+echo "Restarting Jupyter server..."
+if pgrep -f jupyter; then
+  pkill -f jupyter
+  sleep 2
+fi
+
+sudo -u ec2-user nohup jupyter notebook --allow-root &> /var/log/jupyter.log &
+
+echo "Lifecycle configuration completed successfully"
+EOF
 
         # Base64 encode the script
         LIFECYCLE_SCRIPT=$(base64 -w 0 lifecycle_script.sh)
