Trigger CI/CD: update lifecycle scripts

--- a/.github/workflows/sagemaker-cicd.yml
+++ b/.github/workflows/sagemaker-cicd.yml
@@ -31,6 +31,8 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Install unzip
+      run: sudo apt-get update && sudo apt install -y unzip
     - name: Install AWS CLI
       run: |
         curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
