--- a/.github/workflows/sagemaker-cicd.yml
+++ b/.github/workflows/sagemaker-cicd.yml
@@ -31,8 +31,9 @@ jobs:
         sudo apt-get install -y unzip curl
         curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
         unzip -q awscliv2.zip
-        sudo ./aws/install
+        sudo ./aws/install --update
         aws --version
+
 
     - name: Verify AWS Credentials
       run: |
